fix: some points of document

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -2114,7 +2114,7 @@
                         </svg>
                       </div>
                       <div class="card-interactive-icons___box-description">
-                        <p>Desaireadores</p>
+                        <p>Tanques Desaireadores</p>
                       </div>
                     </div>
 
@@ -2224,8 +2224,8 @@
                       </div>
                       <div class="card-interactive-icons___box-description">
                         <p>
-                          Bombas <br />
-                          Centrífugas
+                          Bombas
+                          Transferencia DP
                         </p>
                       </div>
                     </div>
@@ -2276,7 +2276,7 @@
                       <div class="card-interactive-icons___box-description">
                         <p>
                           Bombas <br />
-                          Verticales
+                          Verticales Dilucion
                         </p>
                       </div>
                     </div>
@@ -2413,8 +2413,7 @@
                       </div>
                       <div class="card-interactive-icons___box-description">
                         <p>
-                          Bombas <br />
-                          Centrífugas
+                          Bombas Transferencia Centrífuga
                         </p>
                       </div>
                     </div>
@@ -6511,16 +6510,21 @@
                       style="--outline-color: #27ff00; left: 486px; top: 346px"
                       class="location-map-dot"
                     ></span>
-                  </div>
-
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-3"
-                  >
                     <span
-                      style="--outline-color: #27ff00; left: 517px; top: 351px"
+                      style="--outline-color: #27ff00; left: 498px; top: 352px"
                       class="location-map-dot"
                     ></span>
+                  </div>
+
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-3">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #27ff00;left: 758px;top: 353px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #27ff00;left: 771px;top: 356px;" class="location-map-dot"></span>
+                    <!-- Item 3 -->
+                    <span style="--outline-color: #27ff00;left: 783px;top: 362px;" class="location-map-dot"></span>
+                    <!-- Item 4 -->
+                    <span style="--outline-color: #27ff00;left: 797px;top: 367px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6533,14 +6537,15 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-5"
-                  >
-                    <span
-                      style="--outline-color: #27ff00; left: 513px; top: 349px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-5">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #27ff00;left: 481px;top: 338px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #27ff00;left: 498px;top: 344px;" class="location-map-dot"></span>
+                    <!-- Item 3 -->
+                    <span style="--outline-color: #27ff00;left: 515px;top: 347px;" class="location-map-dot"></span>
+                    <!-- Item 4 -->
+                    <span style="--outline-color: #27ff00;left: 532px;top: 351px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6573,14 +6578,15 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-9"
-                  >
-                    <span
-                      style="--outline-color: #27ff00; left: 802px; top: 364px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-9">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #27ff00;left: 756px;top: 358px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #27ff00;left: 767px;top: 361px;" class="location-map-dot"></span>
+                    <!-- Item 3 -->
+                    <span style="--outline-color: #27ff00;left: 779px;top: 363px;" class="location-map-dot"></span>
+                    <!-- Item 4 -->
+                    <span style="--outline-color: #27ff00;left: 792px;top: 365px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6593,19 +6599,11 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-11"
-                  >
-                    <span
-                      style="--outline-color: #27ff00; left: 507px; top: 356px"
-                      class="location-map-dot"
-                    ></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 489px; top: 370px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-11">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #27ff00;left: 483px;top: 318px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #27ff00;left: 467px;top: 325px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6638,14 +6636,11 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-15"
-                  >
-                    <span
-                      style="--outline-color: #27ff00; left: 419px; top: 349px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-15">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #27ff00;left: 445px;top: 353px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #27ff00;left: 460px;top: 340px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6678,19 +6673,11 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-19"
-                  >
-                    <span
-                      style="--outline-color: #27ff00; left: 451px; top: 343px"
-                      class="location-map-dot"
-                    ></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 495px; top: 350px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none " id="covenas-operaciones-19">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #27ff00;left: 477px;top: 318px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #27ff00;left: 466px;top: 331px;" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6797,22 +6784,13 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-27"
-                  >
-                    <span
-                      style="--outline-color: #21a605; left: 315px; top: 355px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #21a605; left: 290px; top: 365px"
-                      class="location-map-dot"
-                    ></span>
-                    <span
-                      style="--outline-color: #21a605; left: 382px; top: 443px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-27">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #21a605;left: 349px;top: 380px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #21a605;left: 273px;top: 358px;" class="location-map-dot"></span>
+                    <!-- Item 3 -->
+                    <span style="--outline-color: #21a605; left: 382px; top: 443px" class="location-map-dot"></span>
                   </div>
 
                   <div
@@ -6829,14 +6807,11 @@
                     ></span>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-operaciones d-none"
-                    id="covenas-operaciones-29"
-                  >
-                    <span
-                      style="--outline-color: #21a605; left: 302px; top: 393px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-operaciones d-none" id="covenas-operaciones-29">
+                    <!-- Item 1 -->
+                    <span style="--outline-color: #21a605;left: 276px;top: 381px;" class="location-map-dot"></span>
+                    <!-- Item 2 -->
+                    <span style="--outline-color: #21a605;left: 316px;top: 369px;" class="location-map-dot"></span>
                   </div>
 
                   <div
