Fix: adjust coveñas Diego

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -1059,7 +1059,7 @@
                   </div>
                   <div class="col-12 col-lg-6">
 
-                    <!-- <div
+                    <div
                       data-target="covenas-monitoreo-10"
                       style="gap: 16px"
                       class="d-flex align-items-center card-interactive-icons__container">
@@ -1122,9 +1122,9 @@
                           Doméstica (ARD)<br />
                         </p>
                       </div>
-                    </div> -->
+                    </div>
 
-                    <!-- <div
+                    <div
                       data-target="covenas-monitoreo-11"
                       style="gap: 16px"
                       class="d-flex align-items-center mt-3 card-interactive-icons__container">
@@ -1182,7 +1182,7 @@
                           Doméstica (ARnD)<br />
                         </p>
                       </div>
-                    </div> -->
+                    </div>
 
                   </div>
                 </div>
@@ -1473,9 +1473,8 @@
                         </div>
                         <div class="card-interactive-icons___box-description">
                           <p>
-                            Fuente<br />
-                            de Emisión<br />
-                            Ruido<br />
+                            Área<br />
+                            Parque Solar<br />
                           </p>
                         </div>
                       </div>
@@ -1487,7 +1486,7 @@
                       Gestión Integral de Residuos
                     </h6>
 
-                    <!-- <div
+                    <div
                       data-target="covenas-monitoreo-14"
                       style="gap: 16px"
                       class="d-flex align-items-center card-interactive-icons__container">
@@ -1561,10 +1560,9 @@
                         <p>
                           Gestión de<br />
                           Residuos<br />
-                          Aprovechable<br />
                         </p>
                       </div>
-                    </div> -->
+                    </div>
 
                     <div
                       data-target="covenas-monitoreo-15"
@@ -5338,27 +5336,35 @@
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-10">
+                      <!-- item 1 -->
                     <span
-                      style="--outline-color: #fc10ff; left: 355px; top: 282px"
+                      style="--outline-color: #fc10ff; left: 188px; top: 303px"
                       class="location-map-dot"></span>
+                      <!-- item 2 -->
                     <span
-                      style="--outline-color: #fc10ff; left: 454px; top: 272px"
+                      style="--outline-color: #fc10ff; left: 272px; top: 353px"
                       class="location-map-dot"></span>
+                      <!-- item 3 -->
                     <span
-                      style="--outline-color: #fc10ff; left: 299px; top: 363px"
+                      style="--outline-color: #fc10ff; left: 295px; top: 376px"
                       class="location-map-dot"></span>
+                      <!-- item 4 -->
                     <span
                       style="--outline-color: #fc10ff; left: 345px; top: 377px"
                       class="location-map-dot"></span>
+                      <!-- item 5 -->
                     <span
-                      style="--outline-color: #fc10ff; left: 459px; top: 344px"
+                      style="--outline-color: #fc10ff; left: 479px; top: 331px"
                       class="location-map-dot"></span>
+                      <!-- item 6 -->
                     <span
                       style="--outline-color: #fc10ff; left: 394px; top: 430px"
                       class="location-map-dot"></span>
+                      <!-- item 7 -->
                     <span
-                      style="--outline-color: #fc10ff; left: 620px; top: 362px"
+                      style="--outline-color: #fc10ff; left: 602px; top: 487px"
                       class="location-map-dot"></span>
+                      <!-- item 8 -->
                     <span
                       style="--outline-color: #fc10ff; left: 863px; top: 362px"
                       class="location-map-dot"></span>
@@ -5431,7 +5437,7 @@
                     class="dots-map-2024 dots-monitoreo d-none"
                     id="covenas-monitoreo-14">
                     <span
-                      style="--outline-color: #a59eff; left: 448px; top: 341px"
+                      style="--outline-color: #a59eff; left: 865px; top: 384px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5471,8 +5477,25 @@
                   <div
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-4">
+                      <!-- item 1 -->
                     <span
-                      style="--outline-color: #27ff00; left: 486px; top: 346px"
+                      style="--outline-color: #27ff00; left: 442px; top: 318px"
+                      class="location-map-dot"></span>
+                      <!-- item 2 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 460px; top: 321px"
+                      class="location-map-dot"></span>
+                      <!-- item 3 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 478px; top: 325px"
+                      class="location-map-dot"></span>
+                      <!-- item 4 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 498px; top: 328px"
+                      class="location-map-dot"></span>
+                      <!-- item 5 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 517px; top: 332px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5503,8 +5526,13 @@
                   <div
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-8">
+                    <!-- item 1 -->
                     <span
-                      style="--outline-color: #27ff00; left: 506px; top: 325px"
+                      style="--outline-color: #27ff00; left: 490px; top: 325px"
+                      class="location-map-dot"></span>
+                      <!-- item 2 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 508px; top: 320px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5519,8 +5547,25 @@
                   <div
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-10">
+                    <!-- item 1 -->
                     <span
-                      style="--outline-color: #27ff00; left: 513px; top: 338px"
+                      style="--outline-color: #27ff00; left: 500px; top: 327px"
+                      class="location-map-dot"></span>
+                      <!-- item 2 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 518px; top: 331px"
+                      class="location-map-dot"></span>
+                      <!-- item 3 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 536px; top: 335px"
+                      class="location-map-dot"></span>
+                      <!-- item 4 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 554px; top: 339px"
+                      class="location-map-dot"></span>
+                      <!-- item 5 -->
+                    <span
+                      style="--outline-color: #27ff00; left: 572px; top: 343px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5556,7 +5601,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-14">
                     <span
-                      style="--outline-color: #27ff00; left: 490px; top: 343px"
+                      style="--outline-color: #27ff00; left: 500px; top: 335px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5616,7 +5661,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-21">
                     <span
-                      style="--outline-color: #27ff00; left: 365px; top: 331px"
+                      style="--outline-color: #27ff00; left: 389px; top: 319px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5675,7 +5720,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-25">
                     <span
-                      style="--outline-color: #21a605; left: 479px; top: 330px"
+                      style="--outline-color: #21a605; left: 865px; top: 374px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5705,10 +5750,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-28">
                     <span
-                      style="--outline-color: #21a605; left: 260px; top: 362px"
-                      class="location-map-dot"></span>
-                    <span
-                      style="--outline-color: #21a605; left: 285px; top: 346px"
+                      style="--outline-color: #21a605; left: 280px; top: 358px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5724,7 +5766,7 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-30">
                     <span
-                      style="--outline-color: #21a605; left: 467px; top: 311px"
+                      style="--outline-color: #21a605; left: 490px; top: 320px"
                       class="location-map-dot"></span>
                   </div>
 
@@ -5756,15 +5798,20 @@
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-34">
                     <span
-                      style="--outline-color: #21a605; left: 360px; top: 384px"
+                      style="--outline-color: #21a605; left: 333px; top: 384px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div
                     class="dots-map-2024 dots-operaciones d-none"
                     id="covenas-operaciones-35">
+                    <!-- item 1 -->
                     <span
                       style="--outline-color: #21a605; left: 355px; top: 384px"
+                      class="location-map-dot"></span>
+                      <!-- item 2 -->
+                    <span
+                      style="--outline-color: #21a605; left: 385px; top: 384px"
                       class="location-map-dot"></span>
                   </div>
 
