fix: coveñas sre puntos de control

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -6743,32 +6743,56 @@
                     </span>
                   </div>
 
-                  <div class="dots-map-2024 dots-monitoreo" id="covenas-sre-4">
-                    <span
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-4"
+                  >
+                    <a
+                      download
+                      href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de crudo_ajuste 2024.pdf"
                       style="--outline-color: none; left: 418px; top: 269px"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
                       <span class="dot-image-text">C +</span>
-                    </span>
+                    </a>
 
-                    <span
+                    <a
+                      download
+                      href="/assets/docs/covenas/interno/PCP-TCOV-02_derrame de diluyente_ajuste 2024.pdf"
                       style="--outline-color: none; left: 412px; top: 292px"
                       class="location-map-dot dot-image"
                     >
                       <img src="/assets/img/map-punto-control.svg" alt="" />
                       <span class="dot-image-text">D +</span>
-                    </span>
+                    </a>
                   </div>
 
-                  <div
-                    class="dots-map-2024 dots-monitoreo d-none"
-                    id="covenas-sre-5"
-                  >
-                    <span
-                      style="--outline-color: #ff7171; left: 361px; top: 283px"
-                      class="location-map-dot"
-                    ></span>
+                  <div class="dots-map-2024 dots-monitoreo d-none" id="covenas-sre-5">
+                    <a
+                      download=""
+                      href="/assets/docs/covenas/externo/PCE-TCOV-POAES-01 ajuste 2024.pdf"
+                      style="--outline-color: none; left: 354px; top: 273px"
+                      class="location-map-dot dot-image"
+                    >
+                      <img
+                        src="/assets/img/map-punto-control-externo.svg"
+                        alt=""
+                      />
+                      <span class="dot-image-text">PCE 1 +</span>
+                    </a>
+                    <a
+                      download=""
+                      href="/assets/docs/covenas/externo/PCE-TCOV-02 ajuste 2024.pdf"
+                      style="--outline-color: none; left: 376px; top: 250px"
+                      class="location-map-dot dot-image"
+                    >
+                      <img
+                        src="/assets/img/map-punto-control-externo.svg"
+                        alt=""
+                      />
+                      <span class="dot-image-text">PCE 2 +</span>
+                    </a>
                   </div>
 
                   <div
